--- a/sui-pet-pwa/package.json
+++ b/sui-pet-pwa/package.json
@@ -11,17 +11,20 @@
   },
   "dependencies": {
     "@mysten/dapp-kit": "0.19.10",
-    "@mysten/sui": "1.45.1",
+    "@mysten/sui": "^1.45.1",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.2.1",
     "@tanstack/react-query": "^5.87.1",
+    "bs58": "^6.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.555.0",
+    "mapbox-gl": "^3.16.0",
     "next": "^16.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-webcam": "^7.2.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
