--- a/sui-pet-pwa/package.json
+++ b/sui-pet-pwa/package.json
@@ -19,15 +19,18 @@
     "bs58": "^6.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.555.0",
     "mapbox-gl": "^3.16.0",
     "next": "^16.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-webcam": "^7.2.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^24.10.1",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
